# vv-llm

./: .gitignore  LICENSE  README.md  README_ZH.md  pyproject.toml
.github/workflows/: release.yml
src/v_llm/chat_clients/: __init__.py  base_client.py  gemini_client.py  message_normalizer.py  mistral_client.py  stream_event_adapter.py  utils.py
src/v_llm/server/: token_server.py
tests/: conftest.py  dev_settings.example.py  sample_settings.py
tests/live/: dev_settings.example.py  live_common.py  run_live_tests.py  sample_settings.py  test_chat_prefix.py  test_claude_prompt_cache.py  test_claude_thinking.py  test_create_chat_client.py  test_custom_settings.py  test_embedding_client.py  test_error.py  test_format_messages.py  test_format_messages_with_non_multimodal.py  test_format_messages_with_tools.py  test_gemini_thinking.py  test_glm_thinking.py  test_gpt_thinking.py  test_http_client.py  test_image_gen.py  test_image_gen2.py  test_image_input_chat_client.py  test_model_list.py  test_raw_client.py  test_rerank_client.py  test_response_format.py  test_server.py  test_skip_cutoff.py  test_stop.py  test_tokens_count.py  test_tool_use_messages_format.py  test_tool_use_multi_turns.py
tests/unit/: test_anthropic_prompt_cache.py  test_default_models.py  test_embedding_client.py  test_embedding_client_async.py  test_endpoint_binding_enabled.py  test_format_vectorvein_messages_with_tools.py  test_gemini_thought_tag_normalization.py  test_live_stream_output.py  test_openai_compatible_cache_usage.py  test_rerank_client.py  test_rerank_client_async.py  test_retrieval_settings.py  test_settings.py  test_settings_upgrade_from_v1.py  test_thinking_content_parser.py  test_tool_call_content_processor.py  test_version_config.py
(+53 files in other folders)
