[project]
authors = [{name = "Anderson", email = "andersonby@163.com"}]
dependencies = [
  "openai>=1.99.3",
  "tiktoken>=0.7.0",
  "httpx>=0.27.0",
  "anthropic>=0.47.1",
  "pydantic>=2.8.2",
  "Pillow>=10.4.0",
  "deepseek-tokenizer>=0.1.0",
  "qwen-tokenizer>=0.2.0",
]
description = "Universal LLM interfaces for multi-provider chat and utilities"
license = {text = "MIT"}
name = "vv-llm"
readme = "README.md"
requires-python = ">=3.10"
version = "0.3.74"

[project.optional-dependencies]
bedrock = ["boto3 >= 1.28.57", "botocore >= 1.31.57"]
diskcache = ["diskcache"]
redis = ["redis"]
server = ["fastapi", "uvicorn"]
vertex = ["google-auth>=2.35.0"]

[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[tool.pdm]
distribution = true

[tool.pdm.build]
excludes = ["tests"]

[tool.pdm.scripts]
check-all = {composite = ["lint", "format-check", "type-check"]}
format = "ruff format src/"
format-check = "ruff format --check src/"
lint = "ruff check src/"
test.cmd = "pytest tests/unit"
test.env_file = ".env"
test-live.cmd = "python tests/live/run_live_tests.py"
test-live.env = {VV_LLM_RUN_LIVE_TESTS = "1"}
type-check = "ty check src/ --output-format concise --exit-zero"

[tool.ruff]
line-length = 180
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "B",
  "C4",
  "UP",
]
ignore = ["E501", "I001"]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"

[dependency-groups]
dev = [
  "types-redis>=4.6.0.20241004",
  "pytest>=8.3.4",
  "ruff>=0.8.0",
  "ty>=0.0.1a24",
]

[tool.pytest.ini_options]
pythonpath = ["tests"]
testpaths = ["tests/unit"]
